hphp/hack/test/typecheck/control_flow/with_lambdas.php.like_types.exp
File "with_lambdas.php", line 15, characters 5-18:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "with_lambdas.php", line 19, characters 5-18:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
